# weather-data-consumer

./: README.md  docker-compose.yaml  run.sh
i4cast-consumer/: .env.example  .gitignore  Dockerfile  README.md  job.dockerfile  job.sh  pyproject.toml  requirements.txt  run.sh
i4cast-consumer/i4cast_consumer/: __init__.py  __main__.py  app.py  cli.py  exceptions.py  exporters.py  models.py  services.py  settings.py  talker.py  talkers.py
i4cast-mock-api/: .env.example  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt  run.sh
i4cast-mock-api/i4cast_mock_api/: __init__.py  app.py  dependencies.py  settings.py
i4cast-mock-api/i4cast_mock_api/routes/: atmocean.py  auth.py
i4cast-mock-api/i4cast_mock_api/routes/responses/: getEnvironmentalData.json  getStations.json  login.json
i4cast-mock-api/i4cast_mock_api/schemas/: atmocean.py  auth.py
