[tool.poetry]
name = "i4cast-mock-api"
version = "1.0.0"
description = "Mock da API i4cast, utilizado para testes locais e de integração"
authors = ["João Paulo Carvalho <email@jjpaulo2.dev.br>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "i4cast_mock_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
